[tool.poetry]
name = "connexion-30-test"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
connexion = {extras = ["uvicorn"], version = "^3.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
